--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,17 +1,27 @@
 <ul>
-
+<h1>QUESTIONS</h1>
   <% @questions.each do |question| %>
 
-<table>
-   <tr>
-     <th>Questions</th>
-   </tr>
-   <tr>
-     <td><%= link_to question.title, question_path(question) %></td>
-   </tr>
-</table>
+    <table>
+       <tr>
+         <td><%= link_to question.title, question_path(question) %></td>
+         <td><%= link_to 'Edit', '/questions/' + question.to_param + '/edit' %></td>
+         <td><%= link_to 'Delete', '/questions/' + question.to_param, method: :delete %></td>
+       </tr>
+    </table>
+
 
 
   <% end %>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+  <a href="questions/new">submit new question</a>
 
 </ul>
